--- a/VidCoder/Resources/Translations/CommonRes.ka.resx
+++ b/VidCoder/Resources/Translations/CommonRes.ka.resx
@@ -339,5 +339,7 @@
     <value>MB</value>
     <comment>Abbreviation for megabytes</comment>
   </data>
-  
+  <data name="Enabled" xml:space="preserve">
+    <value>აქტივირებულია</value>
+  </data>
 </root>
