--- a/VidCoder/Resources/Translations/MainRes.ka.resx
+++ b/VidCoder/Resources/Translations/MainRes.ka.resx
@@ -749,6 +749,12 @@ v5 ბოლო შემოწმებული ვერსიაა Windows 
   <data name="CopyLogAndReportMenuItem" xml:space="preserve">
     <value>პროტოკოლის კოპირება და შეცდომის შეტყობინება</value>
   </data>
-  
-  
+  <data name="WatcherMenuItem" xml:space="preserve">
+    <value>მეთვალყურე</value>
+  </data>
+  <data name="QueueProgressLabel" xml:space="preserve">
+    <value>დავალება {0}/{1}:</value>
+    <comment>{0} is the current job number for scanning and adding an item to the queue
+{1} is the total number of scanned items this session</comment>
+  </data>
 </root>
